...
            "state": "translated",
            "value": "Ice"
          }
        }
      }
    },
    "Activité": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Activity"
          }
        }
      }
    },
    "Trajets": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Journeys"
          }
        }
      }
    },
    "Paramètres": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
...
            "state": "translated",
            "value": "Yesterday"
          }
        }
      }
    },
    "Jour précédent": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Previous day"
          }
...
            "state": "translated",
            "value": "Today's progress"
          }
        }
      }
    },
    "Jour suivant": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Next day"
          }
...
